<resources>
    <string name="app_name">the_chance_week7_homework3</string>
    <string name="message1">Hi Leo, Whats up?? \nI need a new logo for group.</string>
    <string name="_22_30">22:30</string>
    <string name="simple_minimal_and_beauti">Simple, minimal, and beauti..</string>
    <string name="_22_31">22:31</string>
    <string name="_22_32">22:32</string>
    <string name="oh_that_s_great">Oh, that\'s great 😍</string>
    <string name="_22_33">22:33</string>
    <string name="message">message...</string>
</resources>